[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/main_lobby.gd" type="Script" id=1]
[ext_resource path="res://sprites/player_g.png" type="Texture" id=2]

[node name="main_lobby" type="Control"]
script = ExtResource( 1 )

[node name="HTTP_get" type="HTTPRequest" parent="."]

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 210.0
margin_top = 110.0
margin_right = 510.0
margin_bottom = 150.0
text = "Insert Yout Name Here"
align = 1

[node name="start" type="TouchScreenButton" parent="."]
position = Vector2( 328, 185 )
normal = ExtResource( 2 )

[connection signal="request_completed" from="HTTP_get" to="." method="_on_HTTP_get_request_completed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
